--- a/styles/breakpoints/_960up.scss
+++ b/styles/breakpoints/_960up.scss
@@ -56,9 +56,9 @@ Stylesheet: 960px以上のモニタで適用
   }
 }
 
-.gate-animation-section {
-  margin-bottom: 1800px;
-}
+// .gate-animation-section {
+//   margin-bottom: 2300px;
+// }
 
 .profile {
   &__left {
@@ -88,6 +88,19 @@ Stylesheet: 960px以上のモニタで適用
   }
 }
 
+.about {
+  &__body-wrapper {
+      &__body-top {
+          & .about-body {
+            margin: 14%;
+          }
+      }
+      &__body-bottom {
+        margin: 0 0 0 15%;
+      }
+  }
+}
+
 .skills {
   margin-top: 150px;
   margin-bottom: -70px;
@@ -100,10 +113,68 @@ Stylesheet: 960px以上のモニタで適用
       }
     }
     &__skill-2 {
-      transition-delay: .3s;
+      transition-delay: .5s;
     }
     &__skill-3 {    
-      transition-delay: .6s;
+      transition-delay: 1s;
     }
+  }
+}
+
+.works {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  width: 100%;
+  padding-top: 150px;
+  overflow: hidden;
+  & .works-bg {
+      display: block;
+      position: absolute;
+      top: 35%;
+      left: 20%;
+      width: 80%;
+      height: 40%;
+      &::after {
+          content: "";
+          display: block;
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 120%;
+          background-color: #000000e6;
+          transform: skewY(2deg);
+      }
+  }
+  & .works-container {
+      // width: 100%;
+      &__work-wrapper {
+          // width: 90%;
+          // height: 350px;
+          // & .workMore {
+          //     top: 50%;
+          //     left: -7%;
+          //     width: 135%;
+          //     height: 97.5%;
+          //     transition: .3s;
+          //     // transition-delay: .2s;
+          //     transform: translateY(-50%) skewY(4deg);
+          //     background-color: #1b1a1a;
+          //     color: $c-white;
+          //     &.active {
+          //         opacity: 1;
+          //         height: 127.5%;
+          //     }
+          //     &__body {
+          //         width: 100%;
+          //         height: 100%;
+          //     }
+          // }
+          & .work {
+              width: 100%;
+          }
+      }
   }
 }
