--- a/styles/breakpoints/_base.scss
+++ b/styles/breakpoints/_base.scss
@@ -36,6 +36,11 @@ ul {
 
 a {
     text-decoration: none;
+    color: $c-white;
+}
+
+h2 {
+    @extend .font-lg;
 }
 
 .font-sm {
@@ -73,14 +78,12 @@ a {
         opacity: 1;
     }
 }
-
 .jsFadeInDelay {
     @extend .jsFadeIn;
 }
 .jsFadeInOut {
     @extend .jsFadeIn;
 }
-
 .jsFadeInOutDelay {
     @extend .jsFadeIn;
 }
@@ -96,13 +99,16 @@ a {
         transform: translateY(0);
     }
 }
-
 .jsFadeInUpDelay {
     @extend .jsFadeInUp;
 }
-
 .jsFadeInOutUp {
     @extend .jsFadeInUp;
+}
+
+.no-pointer-events {
+    pointer-events: none;
+    user-select: none;
 }
 
 .rellax {
@@ -135,7 +141,6 @@ a {
         & a{
             line-height: 60px;
             @extend .font-md;
-            color: $c-white;
         }
     }
     &__closing-target {
@@ -241,7 +246,7 @@ a {
         position: absolute;
         top: 0;
         left: 0;
-        width: .5px;
+        width: 1px;
         height: 800px;
         transform: rotate(-45deg) skewY(87deg) scaleX(.2);
         background: $c-black;
@@ -317,10 +322,9 @@ a {
     transform-origin: left;
     transform: scaleX(0) skewY(3deg);
     backface-visibility: hidden;
-    color: $c-black;
-    background-color: #ffffff94;
+    color: $c-white;
+    background-color: #b1a792d9;
     &.cChanged {
-        color: $c-white;
         background-color: #ff00007a;
     }
     &.scrolled {
@@ -348,7 +352,7 @@ a {
             width: 85%;
             margin-top: 10px;
             margin-left: auto;
-            background-color: #d48f80;
+            background-color: #a59d8d;
         }
     }
 }
@@ -472,7 +476,7 @@ a {
 .gate-animation-section {
     position: relative;
     z-index: 5;
-    margin-bottom: 2300px;
+    margin-bottom: 2600px;
 }
 
 .gateAnimation {
@@ -507,23 +511,21 @@ a {
 // イントロ文用
 .my-words-wrapper {
     position: absolute;
-    top: 800px;
+    top: 200px;
     width: 100%;
-    // height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    // visibility: hidden;
     & .my-words-inner {
-        width: 80vw;
+        width: 80%;
         color: $c-black;
         font-family: "Hannari";
         & .my-words {
             &-top {
                 @extend .font-lg;
                 line-height: 40px;
-                transition: 1s !important;
+                margin-top: 300px;
                 pointer-events: none;
                 user-select: none;
             }
@@ -531,7 +533,7 @@ a {
                 @extend .font-lr;
                 margin-top: 180px;
                 line-height: 45px;
-                transition: 1s !important;
+                margin-top: 300px;
                 pointer-events: none;
                 user-select: none;
             }
@@ -539,7 +541,7 @@ a {
                 @extend .font-lg;
                 margin-top: 250px;
                 line-height: 40px;
-                transition: 1s !important;
+                margin-top: 300px;
                 pointer-events: none;
                 user-select: none;
             }
@@ -634,11 +636,6 @@ a {
     color: #000;
 }
 
-.no-pointer-events {
-    pointer-events: none;
-    user-select: none;
-}
-
 .previewImgWrapper {
     display: flex;
     align-items: center;
@@ -668,7 +665,6 @@ a {
     }
 }
 
-
 .aboutCloseTarget {
     display: none;
     position: absolute;
@@ -688,32 +684,48 @@ a {
     @extend .font-md;
     display: block;
     position: sticky;
-    top: 100px;
+    top: 60px;
     left: 45%;
     width: 75%;
-    margin-top: 170px;
+    margin-top: 40px;
     border-bottom: solid 1px #000;
     text-align: right;
     letter-spacing: 5px;
     backface-visibility: hidden;
-    overflow: hidden;
+    margin-bottom: 140px;
 }
 
 .about {
     display: flex;
     flex-direction: column;
+    & .about-bg {
+        display: block;
+        position: absolute;
+        top: 35%;
+        left: 0%;
+        width: 66%;
+        height: 5%;
+        background-color: #0000003b;
+        z-index: -1;
+        transform: skewY(38deg);
+        &:nth-child(2){
+            top: 65%;
+        }
+        &:nth-child(3){
+            top: 95%;
+        }
+    }
     &__body-wrapper {
         display: flex;
         width: 100%;
-        height: 700px;
+        height: 500px;
         flex-direction: column;
-        margin-top: 150px;
         &__body-top {
             display: flex;
             flex-direction: column;
-            width: 75%;
+            width: 35%;
             height: 100%;
-            margin: 30px 3% 0 auto;
+            margin: -70px 3% 0 auto;
             writing-mode: vertical-rl;
             text-orientation: upright;
             -webkit-text-orientation: upright;
@@ -736,7 +748,6 @@ a {
             display: flex;
             flex-direction: row;
             width: 100%;
-            // margin-top: -50px;
             &__about-img-inner {
                 position: relative;
                 width: 15%;
@@ -751,17 +762,16 @@ a {
                 &:nth-child(even){
                     margin-top: 38px;
                 }
-                & > img {
+                &.scrolled {
+                    pointer-events: none;
+                }
+                & .about-img {
                     position: absolute;
                     width: 100%;
                     height: 100%;
                     object-fit: cover;
-                }
-                & > span {
-                    display: block;
-                    position: absolute;
-                    width: 100%;
-                    height: 100%;
+                    box-shadow: .5px .5px 10px;
+                    cursor: pointer;
                 }
             }
         }
@@ -896,4 +906,125 @@ a {
 //////////////////////////////////////////////////////////////////////////////////////////////////////////
 // Works Section
 //////////////////////////////////////////////////////////////////////////////////////////////////////////
+.works-section {
+    position: relative;
+    z-index: 2;
+}
 
+.works {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
+    padding-top: 150px;
+    overflow: hidden;
+    & .works-bg {
+        display: block;
+        position: absolute;
+        top: 35%;
+        left: 20%;
+        width: 80%;
+        height: 40%;
+        &::after {
+            content: "";
+            display: block;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 120%;
+            background-color: #000000e6;
+            transform: skewY(2deg);
+        }
+    }
+    & .works-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        width: 100%;
+        &__work-wrapper {
+            position: relative;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            display: flex;
+            width: 90%;
+            height: 350px;
+            & .workMore {
+                opacity: 0;
+                position: absolute;
+                top: 50%;
+                left: -7%;
+                width: 135%;
+                height: 97.5%;
+                transition: .3s;
+                // transition-delay: .2s;
+                transform: translateY(-50%) skewY(4deg);
+                background-color: #1b1a1a;
+                color: $c-white;
+                &.active {
+                    opacity: 1;
+                    height: 127.5%;
+                }
+                &__body {
+                    @extend .font-sm;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-around;
+                    align-items: center;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+            & .work {
+                position: relative;
+                width: 130%;
+                height: 300px;
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: cover;
+                // box-shadow: 5px 5px 10px #000;
+                transform: rotate(-8deg);
+                cursor: pointer;
+                filter: grayscale(100%);
+                transition: .2s;
+                &:nth-child(1) {
+                    background-image: url(/images/bg-front03.jpg);
+                }
+                &:nth-child(2) {
+                    background-image: url(/images/bg-front01.jpg);
+                }
+                &.active{
+                    transform: scale(.5) translate(-60%,-130%) rotate(0deg);
+                    opacity: .9;
+                    filter: grayscale(0%);
+                }
+                &:hover {
+                    filter: grayscale(0%);
+                }
+            }
+        }
+    }
+}
+
+
+
+//////////////////////////////////////////////////////////////////////////////////////////////////////////
+// Contact Section
+//////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+.contact-section {
+    position: relative;
+    z-index: 2;
+    height: 1000px;
+    margin-top: 150px;
+}
+
+footer {
+    color: $c-black;
+}
