--- a/styles/breakpoints/_600up.scss
+++ b/styles/breakpoints/_600up.scss
@@ -101,7 +101,8 @@ Stylesheet: 600px以上のタブレットやモニタで適用
       }
       &__body-bottom {
         flex-direction: column;
-        margin: 0 0 0 9%;
+        // margin: 0 0 0 9%;
+        width: 100%;
           &__about-img-inner {
               width: 75%; height: 24%;
               &:nth-child(even){
@@ -129,41 +130,36 @@ Stylesheet: 600px以上のタブレットやモニタで適用
 }
 
 .works {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-  width: 100%;
-  // background-position: center;
-//             background-repeat: no-repeat;
-//             background-size: cover;
-//             background-attachment: fixed;
+  // & .works-bg {
+      // &::after {
+      // }
+  // }
   & .works-container {
-      &__work-inner {
-
-          flex-direction: row;
-          // margin-bottom: 150px;
-          &::before {
-            content: "";
-            display: block;
-            position: absolute;
-            top: -10%;
-            left: 20%;
-            width: 120%;
-            height: 108%;
-            background-color: #000000;
-            transform: unset;
-        }
+      // width: 100%;
+      &__work-wrapper {
+          // width: 90%;
+          // height: 350px;
+          // & .workMore {
+          //     top: 50%;
+          //     left: -7%;
+          //     width: 135%;
+          //     height: 97.5%;
+          //     transition: .3s;
+          //     // transition-delay: .2s;
+          //     transform: translateY(-50%) skewY(4deg);
+          //     background-color: #1b1a1a;
+          //     color: $c-white;
+          //     &.active {
+          //         opacity: 1;
+          //         height: 127.5%;
+          //     }
+          //     &__body {
+          //         width: 100%;
+          //         height: 100%;
+          //     }
+          // }
           & .work {
-              width: 70%;
-              height: 300px;
-              &:nth-child(1) {
-                  margin-top: 150px;
-                  background-image: url(/images/bg-front03.jpg);
-              }
-              &:nth-child(2) {
-                  background-image: url(/images/bg-front01.jpg);
-              }
+              width: 110%;
           }
       }
   }
