--- a/styles/breakpoints/_960up.scss
+++ b/styles/breakpoints/_960up.scss
@@ -122,32 +122,10 @@ Stylesheet: 960px以上のモニタで適用
 }
 
 .works {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-  width: 100%;
-  padding-top: 150px;
-  overflow: hidden;
-  & .works-bg {
-      display: block;
-      position: absolute;
-      top: 35%;
-      left: 20%;
-      width: 80%;
-      height: 40%;
-      &::after {
-          content: "";
-          display: block;
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 120%;
-          background-color: #000000e6;
-          transform: skewY(2deg);
-      }
-  }
+  // & .works-bg {
+      // &::after {
+      // }
+  // }
   & .works-container {
       // width: 100%;
       &__work-wrapper {
