--- a/styles/breakpoints/_base.scss
+++ b/styles/breakpoints/_base.scss
@@ -297,8 +297,9 @@ h2 {
         height: 100vh;
         transition: .5s;
         opacity: .95;
+        background-color: #ffffff59;
         &.cChanged {
-            background-color: #000000d9;
+            background-color: #000000bf;
             opacity: 1;
         }
     }
@@ -322,9 +323,10 @@ h2 {
     transform-origin: left;
     transform: scaleX(0) skewY(3deg);
     backface-visibility: hidden;
-    color: $c-white;
-    background-color: #b1a792d9;
+    color: $c-red;
+    background-color: #ffffff00;
     &.cChanged {
+        color: $c-white;
         background-color: #ff00007a;
     }
     &.scrolled {
@@ -348,11 +350,11 @@ h2 {
         &::after {
             content: "";
             display: block;
-            height: 4px;
+            height: 2px;
             width: 85%;
             margin-top: 10px;
             margin-left: auto;
-            background-color: #a59d8d;
+            background-color: $c-black;
         }
     }
 }
@@ -701,21 +703,33 @@ h2 {
     & .about-bg {
         display: block;
         position: absolute;
-        top: 35%;
-        left: 0%;
-        width: 66%;
-        height: 5%;
-        background-color: #0000003b;
+        top: 94%;
+        right: 0%;
+        width: 70%;
+        height: 15%;
+        background-color: #fff;
         z-index: -1;
-        transform: skewY(38deg);
+        transform: skewY(-12deg);
         &:nth-child(2){
-            top: 65%;
+            top: 120%;
         }
-        &:nth-child(3){
-            top: 95%;
-        }
+        // &:nth-child(3){
+        //     top: 65%;
+        // }
+        // &:nth-child(4){
+        //     top: 73%;
+        //     width: 100%;
+        // }
+        // &:nth-child(5){
+        //     top: 93%;
+        // }
+        // &:nth-child(6){
+        //     top: 100%;
+        //     width: 100%;
+        // }
     }
     &__body-wrapper {
+        position: relative;
         display: flex;
         width: 100%;
         height: 500px;
@@ -725,7 +739,7 @@ h2 {
             flex-direction: column;
             width: 35%;
             height: 100%;
-            margin: -70px 3% 0 auto;
+            margin: -70px 10% 0 auto;
             writing-mode: vertical-rl;
             text-orientation: upright;
             -webkit-text-orientation: upright;
@@ -755,9 +769,12 @@ h2 {
                 transform: skewY(-12deg);
                 opacity: .6;
                 margin-left: 5px;
+                filter: grayscale(100%);
                 &:hover {
+                    box-shadow: .5px .5px 10px;
                     opacity: .8;
                     transform: scale(.95) skewY(-12deg);
+                    filter: sepia(0%);
                 }
                 &:nth-child(even){
                     margin-top: 38px;
@@ -770,7 +787,6 @@ h2 {
                     width: 100%;
                     height: 100%;
                     object-fit: cover;
-                    box-shadow: .5px .5px 10px;
                     cursor: pointer;
                 }
             }
@@ -917,7 +933,7 @@ h2 {
     justify-content: flex-end;
     align-items: center;
     width: 100%;
-    padding-top: 150px;
+    padding: 100px 0;
     overflow: hidden;
     & .works-bg {
         display: block;
@@ -1021,9 +1037,61 @@ h2 {
 .contact-section {
     position: relative;
     z-index: 2;
-    height: 1000px;
-    margin-top: 150px;
 }
+
+.fill-link {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.link-title {
+    @extend .font-md;
+    letter-spacing: 14px;
+}
+
+.contact {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    & .link-wrapper {
+        position: absolute;
+        top: 20%;
+        right: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        text-align: center;
+        width: 80%;
+    }
+    &__mail {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 70px;
+        width: 93%;
+        background-color: #000;
+        color: #fff;
+        box-shadow: 1px 1px 10px #000;
+        margin-bottom: 10%;
+        transform: skewY(2deg);
+    }
+    &__wantedly {
+        @extend .contact__mail;
+        background-color: #4bafd2;
+    }
+    &__quita {
+        @extend .contact__mail;
+        background-color: #55c500;
+    }
+    &__github {
+        @extend .contact__mail;
+        background-color: #23292d;
+    }
+}
+
 
 footer {
     color: $c-black;
