--- a/styles/breakpoints/_600up.scss
+++ b/styles/breakpoints/_600up.scss
@@ -1,3 +1,5 @@
+
+
 /******************************************************************
 
 Stylesheet: 600px以上のタブレットやモニタで適用
@@ -28,6 +30,33 @@ Stylesheet: 600px以上のタブレットやモニタで適用
 .line-h-lg {
   line-height: 26px;
 }
+
+.nav-bottom {
+  position: fixed;
+  display: flex;
+  justify-content: flex-end;
+  bottom: 5px;
+  right: 3%;
+  width: 70%;
+  height: 30px;
+  z-index: 98;
+  &::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: -3px;
+    right: 5%;
+    width: 54%;
+    height: 1px;
+    background-color: #000;
+  }
+  & > ul > li > a{
+    letter-spacing: 2px;
+    margin-left: 50px;
+    color: $c-black;
+  }
+}
+
 
 .main-visual {
         &::after {
@@ -159,7 +188,7 @@ Stylesheet: 600px以上のタブレットやモニタで適用
           //     }
           // }
           & .work {
-              width: 110%;
+              width: 90%;
           }
       }
   }
