--- a/styles/breakpoints/_base.scss
+++ b/styles/breakpoints/_base.scss
@@ -193,20 +193,13 @@ h2 {
         }
     }
 }
-// .menu-icon.show {
-//     & span {
-//         background-color: #fff;
-//         &:nth-child(1) {
-//             transform: translate(-12px, 21px) rotate(-630deg);
-//         }
-//         &:nth-child(2) {
-//             transform: translate(-3px, 3px) scaleX(.7) rotate(330deg);
-//         }
-//         &:nth-child(3) {
-//             transform: translate(-3px, 4px) scaleX(.8) rotate(30deg); 
-//         }
-//     }
-// }
+
+.nav-bottom {
+    display: none;
+    & > ul > li > a {
+        @extend .font-sm;
+    }
+}
 
 
 
@@ -236,7 +229,6 @@ h2 {
     }
     &.show {
         transform: translateY(-150%);
-
     }
 }
 
@@ -477,8 +469,9 @@ h2 {
 // ゲートアニメーション用
 .gate-animation-section {
     position: relative;
-    z-index: 5;
+    z-index: 99;
     margin-bottom: 2600px;
+    pointer-events: none;
 }
 
 .gateAnimation {
@@ -519,6 +512,7 @@ h2 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    pointer-events: none;
     & .my-words-inner {
         width: 80%;
         color: $c-black;
@@ -703,15 +697,16 @@ h2 {
     & .about-bg {
         display: block;
         position: absolute;
-        top: 94%;
-        right: 0%;
+        top: 85%;
+        right: 0;
         width: 70%;
         height: 15%;
         background-color: #fff;
         z-index: -1;
         transform: skewY(-12deg);
         &:nth-child(2){
-            top: 120%;
+            top: 115%;
+            width: 100%;
         }
         // &:nth-child(3){
         //     top: 65%;
@@ -830,7 +825,7 @@ h2 {
 //////////////////////////////////////////////////////////////////////////////////////////////////////////
 .skills-section {
     position: relative;
-    margin-top: 200px;
+    margin-top: 100px;
     z-index: 2;
 }
 
@@ -960,6 +955,7 @@ h2 {
         justify-content: space-around;
         align-items: center;
         width: 100%;
+        margin-top: 100px;
         &__work-wrapper {
             position: relative;
             flex-direction: column;
@@ -1037,6 +1033,7 @@ h2 {
 .contact-section {
     position: relative;
     z-index: 2;
+    margin-top: 100px;
 }
 
 .fill-link {
@@ -1044,6 +1041,25 @@ h2 {
     position: absolute;
     width: 100%;
     height: 100%;
+}
+
+.link-title-cover {
+    position: absolute;
+    top: 0;
+    left: -5%;
+    width: 110%;
+    height: 100%;
+    background-color: #000;
+    transform: skewX(-20deg);
+    &::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: -130%;
+        width: 130%;
+        height: 100%;
+        background-color: #fff;
+    }
 }
 
 .link-title {
@@ -1054,7 +1070,7 @@ h2 {
 .contact {
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: 80vh;
     & .link-wrapper {
         position: absolute;
         top: 20%;
@@ -1067,32 +1083,55 @@ h2 {
         width: 80%;
     }
     &__mail {
+        opacity: .9;
         display: flex;
         justify-content: center;
         align-items: center;
         height: 70px;
         width: 93%;
+        margin-bottom: 5%;
         background-color: #000;
         color: #fff;
         box-shadow: 1px 1px 10px #000;
-        margin-bottom: 10%;
         transform: skewY(2deg);
+        overflow: hidden;
+        filter: grayscale(0.3);
+        &:hover {
+            opacity: 1;
+        }
     }
     &__wantedly {
         @extend .contact__mail;
-        background-color: #4bafd2;
+        background-color: #1f80a2;
+        & > img {
+            position: absolute;
+            width: 95px;
+            height: 73px;
+            object-fit: contain;
+        }
     }
-    &__quita {
+    &__qiita {
         @extend .contact__mail;
         background-color: #55c500;
+        & > img {
+            position: absolute;
+            width: 115px;
+            height: 55px;
+        }
     }
     &__github {
         @extend .contact__mail;
         background-color: #23292d;
+        & > img {
+            position: absolute;
+            height: 80px;
+            object-fit: contain;
+        }
     }
 }
 
 
 footer {
     color: $c-black;
+    height: 5vh;
 }
