--- a/styles/style.scss
+++ b/styles/style.scss
@@ -15,9 +15,9 @@
   @import "breakpoints/960up";
 }
 
-@media (min-width: 1280px) {
-  @import "breakpoints/1280up";
-}
+// @media (min-width: 1280px) {
+//   @import "breakpoints/1280up";
+// }
 
 // @media (min-resolution: 192dpi) //Retinaディスプレイ
 //       ,(-webkit-min-device-pixel-ratio: 2) {
