--- a/styles/breakpoints/_600up.scss
+++ b/styles/breakpoints/_600up.scss
@@ -54,6 +54,7 @@ Stylesheet: 600px以上のタブレットやモニタで適用
     letter-spacing: 2px;
     margin-left: 50px;
     color: $c-black;
+    opacity: .4;
   }
 }
 
@@ -125,13 +126,13 @@ Stylesheet: 600px以上のタブレットやモニタで適用
           // & .about-title {
           // }
           & .about-body {
-            margin: 7%;
+            margin: 15% 2% 0 0;
           }
       }
       &__body-bottom {
         flex-direction: column;
         // margin: 0 0 0 9%;
-        width: 100%;
+        width: 58%;
           &__about-img-inner {
               width: 75%; height: 24%;
               &:nth-child(even){
@@ -191,5 +192,17 @@ Stylesheet: 600px以上のタブレットやモニタで適用
               width: 90%;
           }
       }
+  }
+}
+
+.contact {
+  height: 85vh;
+  & .contact-bg-char {
+      position: absolute;
+      top: 6%;
+      left: -1%;
+      color: #000;
+      font-size: 120px;
+      letter-spacing: 30px;;
   }
 }
