--- a/styles/breakpoints/_base.scss
+++ b/styles/breakpoints/_base.scss
@@ -44,23 +44,23 @@ h2 {
 }
 
 .font-sm {
-    font-size: 11px;
+    font-size: 9.5px;
 }
 .font-md {
     font-size: 14px;
 }
 .font-lr {
-    font-size: 17px;
+    font-size: 15px;
 }
 .font-lg {
-    font-size: 20px;
+    font-size: 16px;
 }
 
 .line-h-sm {
-    line-height: 18px;
+    line-height: 16px;
 }
 .line-h-md {
-    line-height: 20px;
+    line-height: 17px;
 }
 .line-h-lg {
     line-height: 22px;
@@ -654,10 +654,16 @@ h2 {
         position: absolute;
         width: 100%;
         height: 300px;
-        // background-image: url('/images/bg-front01.JPG');
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
+        & .previewImgDetail {
+            @extend .font-md;
+            position: absolute;
+            bottom: -60px;
+            left: 10%;
+            color: $c-white;
+        }
     }
 }
 
@@ -702,6 +708,7 @@ h2 {
         width: 70%;
         height: 15%;
         background-color: #fff;
+        box-shadow: 0 1px 5px;
         z-index: -1;
         transform: skewY(-12deg);
         &:nth-child(2){
@@ -732,9 +739,8 @@ h2 {
         &__body-top {
             display: flex;
             flex-direction: column;
-            width: 35%;
             height: 100%;
-            margin: -70px 10% 0 auto;
+            margin: -70px 4% 0 auto;
             writing-mode: vertical-rl;
             text-orientation: upright;
             -webkit-text-orientation: upright;
@@ -746,11 +752,12 @@ h2 {
                 white-space: nowrap;
             }
             & .about-body {
+                // font-family: "Hannari";
+                font-weight: bold;
                 @extend .font-sm;
-                @extend .line-h-lg;
-                width: 100%;
-                height: 100%;
-                margin: 15px;
+                @extend .line-h-md;
+                height: 120%;
+                margin: 85px 10px 0 0;
             }
         }
         &__body-bottom {
@@ -825,7 +832,6 @@ h2 {
 //////////////////////////////////////////////////////////////////////////////////////////////////////////
 .skills-section {
     position: relative;
-    margin-top: 100px;
     z-index: 2;
 }
 
@@ -834,8 +840,7 @@ h2 {
     position: relative;
     width: 100%;
     z-index: 2;
-    margin-top: 100px; 
-    // margin-bottom: -170px;
+    margin-top: 100px;
     &__skills-wrapper {
         display: flex;
         flex-direction: column;
@@ -1036,41 +1041,21 @@ h2 {
     margin-top: 100px;
 }
 
-.fill-link {
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-}
-
-.link-title-cover {
-    position: absolute;
-    top: 0;
-    left: -5%;
-    width: 110%;
-    height: 100%;
-    background-color: #000;
-    transform: skewX(-20deg);
-    &::after {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: -130%;
-        width: 130%;
-        height: 100%;
-        background-color: #fff;
-    }
-}
-
-.link-title {
-    @extend .font-md;
-    letter-spacing: 14px;
-}
 
 .contact {
     position: relative;
     width: 100%;
-    height: 80vh;
+    height: 75vh;
+    overflow: hidden;
+    & .contact-bg-char {
+        position: absolute;
+        top: -3%;
+        left: -2%;
+        color: #000;
+        font-size: 75px;
+        letter-spacing: 7px;
+        line-height: 157px;
+    }
     & .link-wrapper {
         position: absolute;
         top: 20%;
@@ -1083,21 +1068,48 @@ h2 {
         width: 80%;
     }
     &__mail {
-        opacity: .9;
         display: flex;
         justify-content: center;
         align-items: center;
         height: 70px;
-        width: 93%;
+        width: 100%;
         margin-bottom: 5%;
         background-color: #000;
         color: #fff;
         box-shadow: 1px 1px 10px #000;
         transform: skewY(2deg);
-        overflow: hidden;
         filter: grayscale(0.3);
+        overflow: hidden;
         &:hover {
             opacity: 1;
+        }
+        & .link-title-cover {
+            position: absolute;
+            top: 0;
+            left: -5%;
+            width: 110%;
+            height: 100%;
+            background-color: #000;
+            transform: skewX(-20deg);
+            &::after {
+                content: "";
+                position: absolute;
+                top: 0;
+                left: -130%;
+                width: 130%;
+                height: 100%;
+                background-color: #fff;
+            }
+        }
+        & .link-title {
+            @extend .font-md;
+            letter-spacing: 14px;
+        }
+        & .fill-link {
+            display: block;
+            position: absolute;
+            width: 100%;
+            height: 100%;
         }
     }
     &__wantedly {
