--- a/styles/style.css
+++ b/styles/style.css
@@ -22,34 +22,34 @@ a {
 }
 
 .font-sm, .nav-bottom > ul > li > a, .profile__right__profile-wrapper .profile-my-background, .profile__right__profile-wrapper .profile-intro, .about__body-wrapper__body-top .about-body, .skills__skills-wrapper__skill-1 .skill-body, .skills__skills-wrapper__skill-2 .skill-body, .skills__skills-wrapper__skill-3 .skill-body, .works .works-container__work-wrapper .workMore__body {
-  font-size: 11px;
+  font-size: 9.5px;
 }
 
-.font-md, .nav ul a, .h-fade-in__body, .profile__right__profile-wrapper .profile-en-name, .about-header, .skills__skills-wrapper__skill-1 .skill-title, .skills__skills-wrapper__skill-2 .skill-title, .skills__skills-wrapper__skill-3 .skill-title, .link-title {
+.font-md, .nav ul a, .h-fade-in__body, .profile__right__profile-wrapper .profile-en-name, .previewImgWrapper .previewImg .previewImgDetail, .about-header, .skills__skills-wrapper__skill-1 .skill-title, .skills__skills-wrapper__skill-2 .skill-title, .skills__skills-wrapper__skill-3 .skill-title, .contact__mail .link-title, .contact__wantedly .link-title, .contact__qiita .link-title, .contact__github .link-title {
   font-size: 14px;
 }
 
 .font-lr, .my-words-wrapper .my-words-inner .my-words-mid {
-  font-size: 17px;
+  font-size: 15px;
 }
 
 .font-lg, h2, .my-words-wrapper .my-words-inner .my-words-top, .my-words-wrapper .my-words-inner .my-words-bottom, .profile__right__profile-wrapper .profile-name, .about__body-wrapper__body-top .about-title {
-  font-size: 20px;
+  font-size: 16px;
 }
 
 .line-h-sm, .profile__right__profile-wrapper .profile-intro {
-  line-height: 18px;
+  line-height: 16px;
 }
 
-.line-h-md {
-  line-height: 20px;
+.line-h-md, .about__body-wrapper__body-top .about-body {
+  line-height: 17px;
 }
 
-.line-h-lg, .about__body-wrapper__body-top .about-body, .skills__skills-wrapper__skill-1 .skill-body, .skills__skills-wrapper__skill-2 .skill-body, .skills__skills-wrapper__skill-3 .skill-body {
+.line-h-lg, .skills__skills-wrapper__skill-1 .skill-body, .skills__skills-wrapper__skill-2 .skill-body, .skills__skills-wrapper__skill-3 .skill-body {
   line-height: 22px;
 }
 
-.line-h-lg, .about__body-wrapper__body-top .about-body, .skills__skills-wrapper__skill-1 .skill-body, .skills__skills-wrapper__skill-2 .skill-body, .skills__skills-wrapper__skill-3 .skill-body {
+.line-h-lg, .skills__skills-wrapper__skill-1 .skill-body, .skills__skills-wrapper__skill-2 .skill-body, .skills__skills-wrapper__skill-3 .skill-body {
   line-height: 24px;
 }
 
@@ -759,6 +759,13 @@ a {
   background-size: cover;
 }
 
+.previewImgWrapper .previewImg .previewImgDetail {
+  position: absolute;
+  bottom: -60px;
+  left: 10%;
+  color: #fff;
+}
+
 .aboutCloseTarget {
   display: none;
   position: absolute;
@@ -810,6 +817,8 @@ a {
   width: 70%;
   height: 15%;
   background-color: #fff;
+  -webkit-box-shadow: 0 1px 5px;
+          box-shadow: 0 1px 5px;
   z-index: -1;
   -webkit-transform: skewY(-12deg);
           transform: skewY(-12deg);
@@ -841,9 +850,8 @@ a {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 35%;
   height: 100%;
-  margin: -70px 10% 0 auto;
+  margin: -70px 4% 0 auto;
   -webkit-writing-mode: vertical-rl;
       -ms-writing-mode: tb-rl;
           writing-mode: vertical-rl;
@@ -862,9 +870,9 @@ a {
 }
 
 .about__body-wrapper__body-top .about-body {
-  width: 100%;
-  height: 100%;
-  margin: 15px;
+  font-weight: bold;
+  height: 120%;
+  margin: 85px 10px 0 0;
 }
 
 .about__body-wrapper__body-bottom {
@@ -919,7 +927,6 @@ a {
 
 .skills-section {
   position: relative;
-  margin-top: 100px;
   z-index: 2;
 }
 
@@ -1202,42 +1209,21 @@ a {
   margin-top: 100px;
 }
 
-.fill-link {
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-}
-
-.link-title-cover {
-  position: absolute;
-  top: 0;
-  left: -5%;
-  width: 110%;
-  height: 100%;
-  background-color: #000;
-  -webkit-transform: skewX(-20deg);
-          transform: skewX(-20deg);
-}
-
-.link-title-cover::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: -130%;
-  width: 130%;
-  height: 100%;
-  background-color: #fff;
-}
-
-.link-title {
-  letter-spacing: 14px;
-}
-
 .contact {
   position: relative;
   width: 100%;
-  height: 80vh;
+  height: 75vh;
+  overflow: hidden;
+}
+
+.contact .contact-bg-char {
+  position: absolute;
+  top: -3%;
+  left: -2%;
+  color: #000;
+  font-size: 75px;
+  letter-spacing: 7px;
+  line-height: 157px;
 }
 
 .contact .link-wrapper {
@@ -1261,7 +1247,6 @@ a {
 }
 
 .contact__mail, .contact__wantedly, .contact__qiita, .contact__github {
-  opacity: .9;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1272,7 +1257,7 @@ a {
       -ms-flex-align: center;
           align-items: center;
   height: 70px;
-  width: 93%;
+  width: 100%;
   margin-bottom: 5%;
   background-color: #000;
   color: #fff;
@@ -1280,13 +1265,45 @@ a {
           box-shadow: 1px 1px 10px #000;
   -webkit-transform: skewY(2deg);
           transform: skewY(2deg);
-  overflow: hidden;
   -webkit-filter: grayscale(0.3);
           filter: grayscale(0.3);
+  overflow: hidden;
 }
 
 .contact__mail:hover, .contact__wantedly:hover, .contact__qiita:hover, .contact__github:hover {
   opacity: 1;
+}
+
+.contact__mail .link-title-cover, .contact__wantedly .link-title-cover, .contact__qiita .link-title-cover, .contact__github .link-title-cover {
+  position: absolute;
+  top: 0;
+  left: -5%;
+  width: 110%;
+  height: 100%;
+  background-color: #000;
+  -webkit-transform: skewX(-20deg);
+          transform: skewX(-20deg);
+}
+
+.contact__mail .link-title-cover::after, .contact__wantedly .link-title-cover::after, .contact__qiita .link-title-cover::after, .contact__github .link-title-cover::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -130%;
+  width: 130%;
+  height: 100%;
+  background-color: #fff;
+}
+
+.contact__mail .link-title, .contact__wantedly .link-title, .contact__qiita .link-title, .contact__github .link-title {
+  letter-spacing: 14px;
+}
+
+.contact__mail .fill-link, .contact__wantedly .fill-link, .contact__qiita .fill-link, .contact__github .fill-link {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
 
 .contact__wantedly {
@@ -1344,7 +1361,7 @@ Stylesheet: 600px以上のタブレットやモニタで適用
   .font-sm, .nav-bottom > ul > li > a, .profile__right__profile-wrapper .profile-my-background, .profile__right__profile-wrapper .profile-intro, .about__body-wrapper__body-top .about-body, .skills__skills-wrapper__skill-1 .skill-body, .skills__skills-wrapper__skill-2 .skill-body, .skills__skills-wrapper__skill-3 .skill-body, .works .works-container__work-wrapper .workMore__body {
     font-size: 12px;
   }
-  .font-md, .nav ul a, .h-fade-in__body, .profile__right__profile-wrapper .profile-en-name, .about-header, .skills__skills-wrapper__skill-1 .skill-title, .skills__skills-wrapper__skill-2 .skill-title, .skills__skills-wrapper__skill-3 .skill-title, .link-title {
+  .font-md, .nav ul a, .h-fade-in__body, .profile__right__profile-wrapper .profile-en-name, .previewImgWrapper .previewImg .previewImgDetail, .about-header, .skills__skills-wrapper__skill-1 .skill-title, .skills__skills-wrapper__skill-2 .skill-title, .skills__skills-wrapper__skill-3 .skill-title, .contact__mail .link-title, .contact__wantedly .link-title, .contact__qiita .link-title, .contact__github .link-title {
     font-size: 16px;
   }
   .font-lr, .my-words-wrapper .my-words-inner .my-words-mid {
@@ -1356,13 +1373,13 @@ Stylesheet: 600px以上のタブレットやモニタで適用
   .line-h-sm, .profile__right__profile-wrapper .profile-intro {
     line-height: 21px;
   }
-  .line-h-md {
+  .line-h-md, .about__body-wrapper__body-top .about-body {
     line-height: 23px;
   }
   .line-h-lr {
     line-height: 28px;
   }
-  .line-h-lg, .about__body-wrapper__body-top .about-body, .skills__skills-wrapper__skill-1 .skill-body, .skills__skills-wrapper__skill-2 .skill-body, .skills__skills-wrapper__skill-3 .skill-body {
+  .line-h-lg, .skills__skills-wrapper__skill-1 .skill-body, .skills__skills-wrapper__skill-2 .skill-body, .skills__skills-wrapper__skill-3 .skill-body {
     line-height: 26px;
   }
   .nav-bottom {
@@ -1393,6 +1410,7 @@ Stylesheet: 600px以上のタブレットやモニタで適用
     letter-spacing: 2px;
     margin-left: 50px;
     color: #000;
+    opacity: .4;
   }
   .main-visual::after {
     top: 500px;
@@ -1445,14 +1463,14 @@ Stylesheet: 600px以上のタブレットやモニタで適用
     height: 510px;
   }
   .about__body-wrapper__body-top .about-body {
-    margin: 7%;
+    margin: 15% 2% 0 0;
   }
   .about__body-wrapper__body-bottom {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    width: 100%;
+    width: 58%;
   }
   .about__body-wrapper__body-bottom__about-img-inner {
     width: 75%;
@@ -1470,6 +1488,17 @@ Stylesheet: 600px以上のタブレットやモニタで適用
   .works .works-container__work-wrapper .work {
     width: 90%;
   }
+  .contact {
+    height: 85vh;
+  }
+  .contact .contact-bg-char {
+    position: absolute;
+    top: 6%;
+    left: -1%;
+    color: #000;
+    font-size: 120px;
+    letter-spacing: 30px;
+  }
 }
 
 @media (min-width: 960px) {
@@ -1479,9 +1508,9 @@ Stylesheet: 960px以上のモニタで適用
 
 ******************************************************************/
   .font-sm, .nav-bottom > ul > li > a, .profile__right__profile-wrapper .profile-my-background, .profile__right__profile-wrapper .profile-intro, .about__body-wrapper__body-top .about-body, .skills__skills-wrapper__skill-1 .skill-body, .skills__skills-wrapper__skill-2 .skill-body, .skills__skills-wrapper__skill-3 .skill-body, .works .works-container__work-wrapper .workMore__body {
-    font-size: 13px;
+    font-size: 15px;
   }
-  .font-md, .nav ul a, .h-fade-in__body, .profile__right__profile-wrapper .profile-en-name, .about-header, .skills__skills-wrapper__skill-1 .skill-title, .skills__skills-wrapper__skill-2 .skill-title, .skills__skills-wrapper__skill-3 .skill-title, .link-title {
+  .font-md, .nav ul a, .h-fade-in__body, .profile__right__profile-wrapper .profile-en-name, .previewImgWrapper .previewImg .previewImgDetail, .about-header, .skills__skills-wrapper__skill-1 .skill-title, .skills__skills-wrapper__skill-2 .skill-title, .skills__skills-wrapper__skill-3 .skill-title, .contact__mail .link-title, .contact__wantedly .link-title, .contact__qiita .link-title, .contact__github .link-title {
     font-size: 18px;
   }
   .font-lr, .my-words-wrapper .my-words-inner .my-words-mid {
@@ -1493,13 +1522,13 @@ Stylesheet: 960px以上のモニタで適用
   .line-h-sm, .profile__right__profile-wrapper .profile-intro {
     line-height: 21px;
   }
-  .line-h-md {
+  .line-h-md, .about__body-wrapper__body-top .about-body {
     line-height: 23px;
   }
   .line-h-lr {
-    line-height: 28px;
+    line-height: 23px;
   }
-  .line-h-lg, .about__body-wrapper__body-top .about-body, .skills__skills-wrapper__skill-1 .skill-body, .skills__skills-wrapper__skill-2 .skill-body, .skills__skills-wrapper__skill-3 .skill-body {
+  .line-h-lg, .skills__skills-wrapper__skill-1 .skill-body, .skills__skills-wrapper__skill-2 .skill-body, .skills__skills-wrapper__skill-3 .skill-body {
     line-height: 26px;
   }
   .h-fade-in {
@@ -1545,10 +1574,10 @@ Stylesheet: 960px以上のモニタで適用
     margin: 3% 15% 0 35%;
   }
   .about__body-wrapper__body-top .about-body {
-    margin: 14%;
+    margin: 20% 5% 0 0;
   }
   .about__body-wrapper__body-bottom {
-    margin: 0 0 0 15%;
+    margin: 0 0 0 10%;
   }
   .skills {
     margin-top: 150px;
@@ -1576,17 +1605,6 @@ Stylesheet: 960px以上のモニタで適用
   }
   .works .works-container__work-wrapper .work {
     width: 85%;
-  }
-}
-
-@media (min-width: 1280px) {
-  /******************************************************************
-
-Stylesheet: 1280px以上のモニタで適用
-
-******************************************************************/
-  .skill-body {
-    margin: 0 30px;
   }
 }
 /*# sourceMappingURL=style.css.map */
