--- a/styles/breakpoints/_base.scss
+++ b/styles/breakpoints/_base.scss
@@ -372,7 +372,9 @@ h2 {
     position: relative;
     width: 100%;
     height: 551px;
-    background: url("/images/main-visual.jpg") no-repeat center;
+    background-image: url("/images/main-visual-mobile.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
     background-size: cover;
     pointer-events: none;
     // margin-bottom: 100vh;
