--- a/styles/breakpoints/_base.scss
+++ b/styles/breakpoints/_base.scss
@@ -1058,34 +1058,34 @@ h2 {
     position: relative;
     width: 100%;
     height: 75vh;
-    overflow: hidden;
     & .contact-bg-char {
         position: absolute;
-        top: -3%;
+        top: 19%;
         left: -2%;
         color: #000;
-        font-size: 75px;
-        letter-spacing: 7px;
-        line-height: 157px;
+        font-size: 57px;
+        letter-spacing: -3px;
+        line-height: 145px;
     }
     & .link-wrapper {
         position: absolute;
-        top: 20%;
-        right: 0;
+        top: 15%;
+        left: 37%;
         display: flex;
         flex-direction: column;
         justify-content: space-around;
         align-items: center;
         text-align: center;
-        width: 80%;
+        width: 90%;
     }
     &__mail {
+        position: relative;
         display: flex;
         justify-content: center;
         align-items: center;
         height: 70px;
         width: 100%;
-        margin-bottom: 5%;
+        margin-bottom: 20%;
         background-color: #000;
         color: #fff;
         box-shadow: 1px 1px 10px #000;
@@ -1093,7 +1093,7 @@ h2 {
         filter: grayscale(0.3);
         overflow: hidden;
         &:hover {
-            opacity: 1;
+            transform: skewY(2deg) translateY(5px);
         }
         & .link-title-cover {
             position: absolute;
